[package]
name = "expr-parser"
version = "0.1.0"
authors = ["Aramis Razzaghipour <aramisnoah@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan-reporting = "0.9"
logos = "0.11"
num_enum = "0.5"
pretty_assertions = "0.6"
rowan = "0.10"
smol_str = "0.1"
